# was

./: Cargo.toml  index.html  tiny.wasm
.github/workflows/: deploy.yml
src/: lib.rs
ui/: main.slint
