[package]
name = "wasm-tiny"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Kita aktifkan 'std' agar Slint bisa bernapas di Wasm
slint = { version = "1.5", default-features = false, features = ["std", "compat-1-2", "renderer-software"] }
wasm-bindgen = "0.2"

[build-dependencies]
slint-build = "1.5"
